--- a/Android/app/src/main/res/layout/fragment_dashboard.xml
+++ b/Android/app/src/main/res/layout/fragment_dashboard.xml
@@ -11,165 +11,135 @@
         android:layout_margin="8dp"
         android:orientation="vertical">
 
-<!--        <include-->
-<!--            layout="@layout/card_monster"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginVertical="8dp" />-->
-
-<!--        <include-->
-<!--            layout="@layout/card_monster"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginVertical="8dp" />-->
-
-<!--        <include-->
-<!--            layout="@layout/card_monster_short"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginVertical="8dp" />-->
-
-<!--        <include-->
-<!--            layout="@layout/card_monster_short"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginVertical="8dp" />-->
-
         <GridLayout
+            android:id="@+id/monsterCards"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:columnCount="2">
 
-             <include
-                 layout="@layout/tile_monster"
-                 android:layout_width="0dp"
-                 android:layout_height="wrap_content"
-                 android:layout_columnWeight="1"
-                 android:layout_marginVertical="8dp"/>
-
-             <include
-                 layout="@layout/tile_monster"
-                 android:layout_width="0dp"
-                 android:layout_height="wrap_content"
-                 android:layout_columnWeight="1"
-                 android:layout_marginVertical="8dp" />
-
-            <include
-                layout="@layout/tile_monster_short"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_columnWeight="1"
-                android:layout_marginVertical="8dp" />
-
-            <include
-                layout="@layout/tile_monster_short"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_columnWeight="1"
-                android:layout_marginVertical="8dp" />
-
-            <include
-                layout="@layout/card_monster"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_columnWeight="1"
-                android:layout_marginVertical="8dp"/>
-            <include
-                layout="@layout/card_monster"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_columnWeight="1"
-                android:layout_marginVertical="8dp"/>
-<!--            <include-->
-<!--                layout="@layout/tile_monster"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_columnWeight="1"-->
-<!--                android:layout_marginVertical="8dp" />-->
-
-<!--            <include-->
-<!--                layout="@layout/tile_monster"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_columnWeight="1"-->
-<!--                android:layout_marginVertical="8dp" />-->
-
-<!--            <include-->
-<!--                layout="@layout/tile_monster"-->
-<!--                android:layout_width="0dp"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_columnWeight="1"-->
-<!--                android:layout_marginVertical="8dp" />-->
-
-<!--            <include-->
-<!--                layout="@layout/tile_monster"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_columnWeight="1"-->
-<!--                android:layout_marginVertical="8dp" />-->
-
+            <!--            <include-->
+            <!--                layout="@layout/card_monster"-->
+            <!--                android:layout_width="0dp"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:layout_columnWeight="1"-->
+            <!--                android:layout_marginVertical="8dp"/>-->
+            <!--            <include-->
+            <!--                layout="@layout/card_monster"-->
+            <!--                android:layout_width="0dp"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:layout_columnWeight="1"-->
+            <!--                android:layout_marginVertical="8dp"/>-->
+            <!--            <include-->
+            <!--                layout="@layout/card_monster"-->
+            <!--                android:layout_width="0dp"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:layout_columnWeight="1"-->
+            <!--                android:layout_marginVertical="8dp"/>-->
+            <!--            <include-->
+            <!--                layout="@layout/card_monster"-->
+            <!--                android:layout_width="0dp"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:layout_columnWeight="1"-->
+            <!--                android:layout_marginVertical="8dp"/>-->
         </GridLayout>
 
         <GridLayout
+            android:id="@+id/monsterShortCards"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:columnCount="2">
+            <!--            <include-->
+            <!--                layout="@layout/card_monster_short"-->
+            <!--                android:layout_width="0dp"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:layout_columnWeight="1"-->
+            <!--                android:layout_marginVertical="8dp"/>-->
+            <!--            <include-->
+            <!--                layout="@layout/card_monster_short"-->
+            <!--                android:layout_width="0dp"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:layout_columnWeight="1"-->
+            <!--                android:layout_marginVertical="8dp"/>-->
+            <!--            <include-->
+            <!--                layout="@layout/card_monster_short"-->
+            <!--                android:layout_width="0dp"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:layout_columnWeight="1"-->
+            <!--                android:layout_marginVertical="8dp"/>-->
+            <!--            <include-->
+            <!--                layout="@layout/card_monster_short"-->
+            <!--                android:layout_width="0dp"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:layout_columnWeight="1"-->
+            <!--                android:layout_marginVertical="8dp"/>-->
+        </GridLayout>
 
-            <include
-                layout="@layout/tile_monster_short"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_columnWeight="1"
-                android:layout_marginVertical="8dp" />
+        <GridLayout
+            android:id="@+id/monsterTiles"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:columnCount="2">
+            <!--            <include-->
+            <!--                layout="@layout/tile_monster"-->
+            <!--                android:layout_width="0dp"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:layout_columnWeight="1"-->
+            <!--                android:layout_marginVertical="8dp"/>-->
 
-            <include
-                layout="@layout/tile_monster_short"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_columnWeight="1"
-                android:layout_marginVertical="8dp" />
+            <!--            <include-->
+            <!--                layout="@layout/tile_monster"-->
+            <!--                android:layout_width="0dp"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:layout_columnWeight="1"-->
+            <!--                android:layout_marginVertical="8dp" />-->
 
-                    <include
-                        layout="@layout/tile_monster_short"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_columnWeight="1"
-                        android:layout_marginVertical="8dp" />
+            <!--            <include-->
+            <!--                layout="@layout/tile_monster"-->
+            <!--                android:layout_width="0dp"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:layout_columnWeight="1"-->
+            <!--                android:layout_marginVertical="8dp"/>-->
 
-                    <include
-                        layout="@layout/tile_monster_short"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_columnWeight="1"
-                        android:layout_marginVertical="8dp" />
+            <!--            <include-->
+            <!--                layout="@layout/tile_monster"-->
+            <!--                android:layout_width="0dp"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:layout_columnWeight="1"-->
+            <!--                android:layout_marginVertical="8dp" />-->
+        </GridLayout>
 
-                    <include
-                        layout="@layout/tile_monster_short"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_columnWeight="1"
-                        android:layout_marginVertical="8dp" />
+        <GridLayout
+            android:id="@+id/monsterShortTiles"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:columnCount="2">
+            <!--            <include-->
+            <!--                layout="@layout/tile_monster_short"-->
+            <!--                android:layout_width="0dp"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:layout_columnWeight="1"-->
+            <!--                android:layout_marginVertical="8dp" />-->
 
-                    <include
-                        layout="@layout/tile_monster_short"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_columnWeight="1"
-                        android:layout_marginVertical="8dp" />
+            <!--            <include-->
+            <!--                layout="@layout/tile_monster_short"-->
+            <!--                android:layout_width="0dp"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:layout_columnWeight="1"-->
+            <!--                android:layout_marginVertical="8dp" />-->
+            <!--            <include-->
+            <!--                layout="@layout/tile_monster_short"-->
+            <!--                android:layout_width="0dp"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:layout_columnWeight="1"-->
+            <!--                android:layout_marginVertical="8dp" />-->
 
-                    <include
-                        layout="@layout/tile_monster_short"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_columnWeight="1"
-                        android:layout_marginVertical="8dp" />
+            <!--            <include-->
+            <!--                layout="@layout/tile_monster_short"-->
+            <!--                android:layout_width="0dp"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:layout_columnWeight="1"-->
+            <!--                android:layout_marginVertical="8dp" />-->
+        </GridLayout>
 
-                    <include
-                        layout="@layout/tile_monster_short"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_columnWeight="1"
-                        android:layout_marginVertical="8dp" />
-                </GridLayout>
     </LinearLayout>
 </ScrollView>
