--- a/app/src/main/res/layout/card_monster.xml
+++ b/app/src/main/res/layout/card_monster.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_margin="@dimen/text_margin"
     android:background="@drawable/rectangle_background">
 
     <TextView
